--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "mdb-ui-kit": "^4.4.0",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.4.0",
